# mizan

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
crates/mizan-api/: Cargo.toml
crates/mizan-api/src/: auth.rs  billing.rs  daemon_nodes.rs  dispatch.rs  gateway.rs  lib.rs  logging.rs  main.rs  metrics.rs  providers.rs  storage.rs  utils.rs
crates/mizan-cli/: Cargo.toml
crates/mizan-cli/src/: main.rs
crates/mizan-core/: Cargo.toml
crates/mizan-core/src/: config.rs  context.rs  database.rs  error.rs  lib.rs  redaction.rs  schema.rs  telemetry.rs
crates/mizan-daemon/: Cargo.toml
crates/mizan-daemon/src/: main.rs
crates/mizan-gateway/: Cargo.toml
crates/mizan-gateway/src/: lib.rs
crates/mizan-limits/: Cargo.toml
crates/mizan-limits/src/: lib.rs
crates/mizan-metering/: Cargo.toml
crates/mizan-metering/src/: lib.rs
crates/mizan-providers/: Cargo.toml
crates/mizan-providers/src/: lib.rs
crates/mizan-rtk/: Cargo.toml
crates/mizan-rtk/src/: filter.rs  lib.rs  proxy.rs
crates/mizan-wallet/: Cargo.toml
crates/mizan-wallet/src/: lib.rs
docs/: ALPHA_1_READINESS.md  ALPHA_RUNBOOK.md  ARCHITECTURE.md  BACKEND_IMPLEMENTATION_PLAN.md  DISTRIBUTED_PROXY.md  ENGINEERING_PRINCIPLES.md  ISSUE_BACKLOG.md  LIMIT_TESTING.md  MVP_ROADMAP.md  NAME_OPTIONS.md  PRD.md  RELEASE_0_1_0.md  RESEARCH.md  RTK_BASELINE_ATTESTATION.md  RTK_BASE_STRATEGY.md  USER_ONBOARDING.md
migrations/: 0001_initial.sql  0002_request_log_foundations.sql  0003_provider_auth_modes.sql  0004_daemon_nodes.sql  0005_daemon_capabilities.sql  0006_dispatch_jobs.sql  README.md
scripts/: alpha-smoke.sh  distributed-onboarding-smoke.sh  limit-smoke.sh  mock-openai.py  model-sync.sh  user-onboarding-smoke.sh
