[workspace]
resolver = "3"
members = [
    "crates/mizan-api",
    "crates/mizan-cli",
    "crates/mizan-core",
    "crates/mizan-daemon",
    "crates/mizan-gateway",
    "crates/mizan-limits",
    "crates/mizan-metering",
    "crates/mizan-providers",
    "crates/mizan-rtk",
    "crates/mizan-wallet",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/pendig/mizan"
rust-version = "1.95"

[workspace.dependencies]
async-trait = "0.1"
axum = "0.8"
redis = "1.2"
sha2 = "0.11.0"
base64 = "0.22"
aes-gcm = "0.10"
bcrypt = "0.19"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "macros", "any", "postgres", "sqlite", "uuid", "time", "json", "migrate"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net", "sync", "time"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["serde", "v7"] }
