[package]
name = "mizan-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
bcrypt.workspace = true
mizan-core = { path = "../mizan-core" }
mizan-gateway = { path = "../mizan-gateway" }
mizan-providers = { path = "../mizan-providers" }
redis.workspace = true
sha2.workspace = true
serde.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true
