[package]
name = "mizan-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
aes-gcm.workspace = true
base64.workspace = true
bcrypt.workspace = true
redis.workspace = true
sha2.workspace = true
serde.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true
mizan-core = { path = "../mizan-core" }
mizan-gateway = { path = "../mizan-gateway" }
mizan-providers = { path = "../mizan-providers" }
