[package]
name = "mizan-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
mizan-rtk = { path = "../mizan-rtk" }
clap = { version = "4", features = ["derive"] }
futures-util.workspace = true
serde_json.workspace = true
tokio.workspace = true
