[package]
name = "mizan-metering"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
mizan-core = { path = "../mizan-core" }
mizan-providers = { path = "../mizan-providers" }
serde.workspace = true
uuid.workspace = true
