[package]
name = "mizan-providers"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
futures-util.workspace = true
reqwest.workspace = true
async-trait.workspace = true
mizan-core = { path = "../mizan-core" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio.workspace = true
