[package]
name = "mizan-rtk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
mizan-core = { path = "../mizan-core" }
mizan-providers = { path = "../mizan-providers" }
tokio.workspace = true
uuid = { workspace = true }
